<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:theme="@style/MainTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity"
                android:transitionGroup="true">

    <TextView android:text="@string/title_options"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/fragmentTitle"
              android:textSize="35sp"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true" />

   <Button
           android:layout_width="@dimen/bluetooth_button"
           android:layout_height="wrap_content"
           android:text="@string/text_bt_search"
           android:id="@+id/buttonSearch"
           android:clickable="true"
           android:onClick="bluetoothSearch"
           android:layout_below="@+id/buttonOnOff"
           android:layout_toEndOf="@+id/Buffer"
           android:layout_toRightOf="@+id/Buffer"/>

    <Button
            android:layout_width="@dimen/bluetooth_button"
            android:layout_height="wrap_content"
            android:text="@string/text_bt_pdevices"
            android:id="@+id/buttonDevices"
            android:clickable="true"
            android:layout_alignParentEnd="false"
            android:layout_below="@+id/bluetoothStatus"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/Buffer"
            android:layout_alignBottom="@+id/buttonSearch"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_off"
            android:textColor="@color/Red"
            android:id="@+id/bluetoothStatus"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_toEndOf="@+id/connectedTitle"
            android:layout_alignTop="@+id/buttonOnOff"
            android:layout_alignBottom="@+id/buttonOnOff"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"/>

    <Button
            android:layout_width="@dimen/bluetooth_button"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_switch_on"
            android:clickable="true"
            android:id="@+id/buttonOnOff"
            android:layout_toEndOf="@+id/Buffer"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/fragmentTitle"
            android:layout_toRightOf="@+id/Buffer"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_bt_connected"
            android:id="@+id/connectedTitle"
            android:textSize="24sp"
            android:layout_below="@+id/buttonDevices"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Buffer"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/fragmentTitle"
            android:height="60dp"
            android:width="24dp"
            android:elegantTextHeight="false"/>


</RelativeLayout>